--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
-name = "tauri-template"
+name = "passforge"
 version = "1.0.0"
-description = "Tauri App Template With Some Config To Get Started"
-authors = ["Author"]
+description = "An Opensource Password Generator"
+authors = ["Sandun Wiratunga"]
 license = "MIT"
-repository = "https://github.com/sandunwira/TauriTemplate"
+repository = "https://github.com/sandunwira/PassForge"
 edition = "2021"
 publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.4.0", features = [] }
+tauri-build = { version = "1.5.0", features = [] }
 
 [dependencies]
 serde_json = "1.0"
-tauri-bundler = "1.3.0"
+tauri-bundler = "1.4.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = [ "updater", "fs-all", "window-show", "window-unminimize", "window-close", "window-minimize", "window-unmaximize", "window-maximize", "window-hide", "shell-open"] }
+tauri = { version = "1.5.1", features = [ "clipboard-all", "updater", "fs-all", "window-show", "window-unminimize", "window-close", "window-minimize", "window-unmaximize", "window-maximize", "window-hide", "shell-open"] }
 tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
 tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
 
